--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@vant/touch-emulator": "^1.4.0",
     "axios": "^1.7.7",
+    "copy-to-clipboard": "^3.3.3",
     "exceljs": "^4.4.0",
     "file-saver": "^2.0.5",
     "lodash": "^4.17.21",
